force-app/main/default/objects/Application__c/fields/Assessment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Stage__c</fullName>
    <description>This field can be used to define assessment stages within the application stages. This way you could define multiple rounds of assessments within 1 stage. Use dependent picklists to manage which Assessment Stages belong to which Application Stage.</description>
    <inlineHelpText>This field can be used to define assessment stages within the application stages. This way you could define multiple rounds of assessments within 1 stage. Use dependent picklists to manage which Assessment Stages belong to which Application Stage.</inlineHelpText>
    <label>Assessment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>