force-app/main/default/objects/Application__c/fields/FormAssembly_Application_Attach_Name__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_Application_Attach_Name__c</fullName>
    <formula>&quot;Full Application&quot; &amp; &quot; - &quot; &amp; Name &amp; &quot;.pdf&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormAssembly - Application Attach Name</label>
    <type>Text</type>
</CustomField>