force-app/main/default/objects/Application__c/fields/FormAssembly_EOI_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_EOI_Attachment_Name__c</fullName>
    <formula>&quot;Expression of Interest&quot; &amp; &quot; - &quot; &amp; Name &amp; &quot;.pdf&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormAssembly - EOI Attachment Name</label>
    <type>Text</type>
</CustomField>