force-app/main/default/objects/Application__c/fields/FormAssembly_EOI_content__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_EOI_content__c</fullName>
    <description>Rich text copy of Form Assembly form for Expression Of Interest content</description>
    <label>FormAssembly - EOI content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>