force-app/main/default/objects/Application__c/fields/FormAssembly_Full_Application_content__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_Full_Application_content__c</fullName>
    <description>Rich text download of Form Assembly form of full application form</description>
    <label>FormAssembly - Full Application content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>