force-app/main/default/objects/Application__c/fields/Investment_description__c.field-meta.xml
<CustomField>
    <fullName>Investment_description__c</fullName>
    <label>Investment description</label>
    <type>TextArea</type>
</CustomField>