force-app/main/default/objects/Application__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <description>Likelihood that an application will lead to an investment (this field is used to subsequently calculate the Weighted Amount of the application</description>
    <label>Likelihood (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>