force-app/main/default/objects/Application__c/fields/Purpose_of_the_loan__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_the_loan__c</fullName>
    <label>Purpose of the loan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>