force-app/main/default/objects/Application__c/fields/Report_Template__c.field-meta.xml
<CustomField>
    <fullName>Report_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Template</label>
    <referenceTo>Report_Template__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>