force-app/main/default/objects/Application__c/fields/When_do_you_need_commitment__c.field-meta.xml
<CustomField>
    <fullName>When_do_you_need_commitment__c</fullName>
    <label>When do you need commitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>